[gd_scene load_steps=5 format=3 uid="uid://dxj6n5lw1cfr2"]

[ext_resource type="Script" path="res://src/dino/DinoGym.gd" id="1_chhvb"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_4ktkv"]
[ext_resource type="PackedScene" uid="uid://sisqkgg1lwpf" path="res://src/dino/hud/DinoHUD.tscn" id="3_axplm"]
[ext_resource type="Script" path="res://src/dino/hud/DinoHUD.gd" id="4_gdayk"]

[node name="DinoGym" type="Node"]
script = ExtResource("1_chhvb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("2_4ktkv")

[node name="DinoHUD" type="Control" parent="." groups=["dino_hud"] instance=ExtResource("3_axplm")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_gdayk")
